syntax = "proto3";

option csharp_namespace = "GrpcPoco";

package CommandExecutor;

service CommandService {
  rpc ExecuteCommand (CommandRequest) returns (CommandResult);
}

message CommandRequest {
  string message = 1;
  repeated Thing things = 2;
}

message CommandResult {
  string message = 1;
}

message Thing {
	string type = 1;
	int32 value = 2;
}